[package]
name = "heygpt"
description = "A simple CLI tool that uses ChatGPT API to respond to messages"
authors = ["Eric Fu"]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fuyufjh/heygpt"

[[bin]]
name = "heygpt"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
reqwest-eventsource = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.26", features = ["macros"] }
anyhow = "1.0"
futures = "0.3"
clap = { version = "4.1", features = ["derive", "env"] }
console = "0.15"
rustyline = { version = "11.0", features = ["with-file-history"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
spinners = "4.1"
atty = "0.2"
